2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: Add coverage for login(), logout() and
	  createCharacter().

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* test/Makefile.am: Add specific SOURCES lines for all the single
	  file tests, for the benefit of some more retarded versions of
	  automake.

2007-10-04  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.h: Switch private member variables to protected,
	  so they can be manipulated for testing.

2007-10-03  Al Riddoch  <alriddoch@zepler.org>

	* test/Account_unittest.cpp: First stages of covering the Account
	  class.

	* test/avatarTest.cpp, test/metaQuery.cpp, test/netTests.cpp,
	  test/setupHelpers.cpp, test/setupHelpers.h, test/signalHelpers.h,
	  test/testOutOfGame.cpp, test/tests.cpp, test/viewTest.cpp,
	  test/viewTest.h: Switch from the deprecated legacy compatability
	  sigc++ API to the current interface.

2007-10-03  Al Riddoch  <alriddoch@zepler.org>

	* Eris/View.h, Eris/TypeInfo.h, Eris/PollDefault.h, Eris/Entity.cpp,
	  Eris/Metaserver.h: Switch from the deprecated legacy compatability
	  sigc++ API to the current interface.

	* Eris/Account.cpp, Eris/Account.h: Clean up the whitespace and
	  indenting.

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Log.h, Eris/Log.cpp: Use the current sigc++ API rather than
	  the deprecated compatability interface.

	* Eris/BaseConnection.cpp: Initialise some member pointers to null,
	  and add assert checks on them.

	* test/SignalFlagger.h: Add a simple class to be used in tests
	  to indicate if a sigc++ signal has emitted.

	* test/Log_unittest.cpp: Add comprehensive coverage of the Log
	  calls.

	* test/BaseConnection_unittest.cpp: Add fairly complete coverage
	  of BaseConnection.

2007-10-02  Al Riddoch  <alriddoch@zepler.org>

	* test/metaQuery.cpp: Output uptime in more friendly terms.

	* test/Makefile.am: Add unit test stubs for all the headers in the
	  library.
